Make the code JDK8 compatible.